// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskCheckbox renders correctly when task is COMPLETED 1`] = `
<Checkbox
  checked={true}
  checkedIcon={
    <CheckCircle
      className=""
    />
  }
  color="primary"
  disableRipple={true}
  icon={
    <RadioButtonUnchecked
      className=""
    />
  }
  onChange={[Function]}
/>
`;

exports[`Component - TaskCheckbox renders correctly when task is UNCOMPLETED 1`] = `
<Checkbox
  checked={false}
  checkedIcon={
    <CheckCircle
      className=""
    />
  }
  color="primary"
  disableRipple={true}
  icon={
    <RadioButtonUnchecked
      className=""
    />
  }
  onChange={[Function]}
/>
`;
